--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && react-scripts build && echo '/* /index.html 200' | cat >build/_redirects ",
     "lint": "eslint .",
     "preview": "vite preview"
   },
